bug cnat add two links

--- a/views/templates/admin/block/edit.html.twig
+++ b/views/templates/admin/block/edit.html.twig
@@ -16,7 +16,7 @@
                 {{ form_start(Form) }}
                 <div class="card">
                     <h3 class="card-header">
-                        <i class="material-icons">mail_outline</i>
+                        <i class="material-icons">bookmark_border</i>
                         {{ 'Block'|trans({}, 'Modules.Demodoctrine.Admin') }}
                     </h3>
                     <div class="card-block row">
