--- a/views/templates/admin/index.html.twig
+++ b/views/templates/admin/index.html.twig
@@ -13,5 +13,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-
+    <script src="{{ asset('../modules/kj_custommenu/views/js/grid/index.js') }}"></script>
+    <script src="{{ asset('themes/default/js/bundle/pagination.js') }}"></script>
 {% endblock %}
